--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -27,12 +27,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    compile 'com.github.rozidan:logger-spring-boot:1.1.0'
     implementation 'de.codecentric:spring-boot-admin-starter-server'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation  group: 'log4j', name: 'log4j', version: '1.2.16'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'mysql:mysql-connector-java:8.0.13'
     implementation 'com.auth0:java-jwt:3.4.0'
+    implementation group: 'com.google.zxing', name: 'core', version: '3.4.0'
+    implementation group: 'com.google.zxing', name: 'javase', version: '3.4.0'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
