--- a/Backend/src/main/resources/application-local.properties
+++ b/Backend/src/main/resources/application-local.properties
@@ -1,9 +1,12 @@
 spring.data.mongodb.host=192.168.99.100
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=products
+spring.data.mongodb.username=root
+spring.data.mongodb.password=rootpassword
+spring.data.mongodb.authentication-database=admin
 
 
-spring.datasource.url=jdbc:mysql://192.168.99.100:3306/users?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.99.100:3306/users
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=create-drop
