--- a/Backend/src/main/resources/application-local.properties
+++ b/Backend/src/main/resources/application-local.properties
@@ -1,3 +1,4 @@
+#mongodb products
 spring.data.mongodb.host=192.168.99.100
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=products
@@ -5,7 +6,7 @@ spring.data.mongodb.username=root
 spring.data.mongodb.password=rootpassword
 spring.data.mongodb.authentication-database=admin
 
-
+#mysql users
 spring.datasource.url=jdbc:mysql://192.168.99.100:3306/users
 spring.datasource.username=root
 spring.datasource.password=password
@@ -13,3 +14,11 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database=mysql
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = true
+
+#cassandra
+spring.data.cassandra.contact-points=192.168.99.100
+spring.data.cassandra.username=cassandra
+spring.data.cassandra.password=cassandra
+spring.data.cassandra.keyspace-name=foodtracker
+spring.data.cassandra.port=9042
+spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
