--- a/Backend/src/main/resources/application-deviles.properties
+++ b/Backend/src/main/resources/application-deviles.properties
@@ -25,3 +25,7 @@ spring.data.cassandra.keyspace-name=foodtracker
 spring.data.cassandra.port=10350
 spring.data.cassandra.schema-action=CREATE_IF_NOT_EXISTS
 spring.data.cassandra.ssl=true
+
+#file size upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
