--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-html5-camera-photo": "^1.5.4",
     "react-multi-carousel": "^2.5.5",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
