--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,13 +9,16 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "microsoft-cognitiveservices-speech-sdk": "^1.12.0",
     "moment": "^2.24.0",
     "react": "^16.13.1",
+    "react-dictate-button": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-html5-camera-photo": "^1.5.4",
     "react-multi-carousel": "^2.5.5",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "web-speech-cognitive-services": "^7.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
