--- a/Backend/src/main/resources/application-dev.properties
+++ b/Backend/src/main/resources/application-dev.properties
@@ -11,7 +11,7 @@ spring.data.mongodb.uri=mongodb://mongo-cosmosdb-pa:rwojFwcwYC6dmJgpwSnutcwwuJER
 
 
 #mysql users
-spring.datasource.url=jdbc:mysql://192.168.99.100:3306/users
+spring.datasource.url=jdbc:mysql://localhost:3306/users
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
