--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,9 +9,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "microsoft-cognitiveservices-speech-sdk": "^1.12.0",
     "moment": "^2.24.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dictate-button": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-html5-camera-photo": "^1.5.4",
