graph value returned

--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation group: 'com.google.zxing', name: 'javase', version: '3.4.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-cassandra'
     implementation group: 'com.datastax.oss', name: 'java-driver-core', version: '4.6.0'
+    implementation 'com.opencsv:opencsv:4.5'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
