--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
+    "chartjs-plugin-annotation": "^0.5.7",
     "microsoft-cognitiveservices-speech-sdk": "^1.12.0",
     "moment": "^2.24.0",
     "react": "^16.13.1",
