--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
+    "js-file-download": "^0.4.12",
     "microsoft-cognitiveservices-speech-sdk": "^1.12.0",
     "moment": "^2.24.0",
     "react": "^16.13.1",
